nat-gateways.tf
# Resource: aws_nat_gateway
# https://registry.terraform.io/providers/aaronfeng/aws/latest/docs/resources/nat_gateway

resource "aws_nat_gateway" "gw1" {
  # The allocation Id of the Elastic IP address for the gateway.
  allocation_id = aws_eip.nat1.id

  # The subnet ID of the subnet in which to place the gateway
  subnet_id = aws_subnet.public_1.id

  # A Map of tags to assign to the resource.
  tags = {
    Name = "NAT 1"
  }
}


resource "aws_nat_gateway" "gw2" {
  # The allocation Id of the Elastic IP address for the gateway.
  allocation_id = aws_eip.nat2.id

  # The subnet ID of the subnet in which to place the gateway
  subnet_id = aws_subnet.public_2.id

  # A Map of tags to assign to the resource.
  tags = {
    Name = "NAT 2"
  }
}
